--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-elements": "^1.0.0-beta5",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-tab-view": "^1.0.2",
     "react-navigation": "^2.9.3"
   }
 }
