--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-aws3": "^0.0.8",
