--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "~0.55.2",
     "react-native-aws3": "^0.0.8",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-tab-view": "^1.0.2",
