--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "immutability-helper": "^2.7.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
@@ -31,6 +32,9 @@
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-tab-view": "^1.0.2",
-    "react-navigation": "^2.9.3"
+    "react-navigation": "^2.9.3",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-axios-middleware": "^4.0.0"
   }
 }
