--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "exp": "^56.0.0",
     "expo": "^27.0.1",
     "immutability-helper": "^2.7.1",
     "prop-types": "^15.6.2",
