--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-snap-carousel": "^3.7.2",
     "react-native-tab-view": "^1.0.2",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
