--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ AWS_SECRET_ACCESS_KEY=<AWS_SECRET_ACCESS_KEY>
 BUCKET_REGION=<S3_BUSCKET_REGION>
 BUCKET=<S3_BUCKET_NAME>
 DISTANCE_MATRIX_API_KEY=<GOOGLE_DISTANCE_MATRIX_API_KEY>
+GOOGLE_PLACES_API_KEY=<GOOGLE_PLACES_API_KEY>
+GOOGLE_AD_MOB_APP_ID=<GOOGLE_AD_MOB_APP_ID>
+FULL_SCREEN_AD_UNIT=<FULL_SCREEN_AD_UNIT>
