--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "exp start",
+    "start-prod": "ENVFILE=.env.production exp start",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
