--- a/app.json
+++ b/app.json
@@ -1,6 +1,13 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "name": "My Atlas",
+    "icon": "./assets/images/atlas-icon.png",
+    "version": "1.0.0",
+    "slug": "moneta",
+    "sdkVersion": "27.0.0",
+    "ios": {
+      "bundleIdentifier": "com.sheltonjs.myatlas"
+    }
   },
   "ios": {
     "googleMapsApiKey": "AIzaSyAZTKr5_Zg21AwqV_f2x3H4LsQjjXTRAk8"
