--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.14",
     "axios": "^0.18.0",
     "exp": "^56.0.0",
     "expo": "^27.0.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "immutability-helper": "^2.7.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
+    "react-apollo": "^2.1.11",
     "react-native": "~0.55.2",
     "react-native-aws3": "^0.0.8",
     "react-native-elements": "^1.0.0-beta5",
