--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "splash": {
       "image": "./assets/images/atlas-icon.png",
       "resizeMode": "contain"
-    }
+    },
+    "orientation": "portrait"
   },
   "ios": {
     "googleMapsApiKey": "AIzaSyAZTKr5_Zg21AwqV_f2x3H4LsQjjXTRAk8"
