--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-aws3": "^0.0.8",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-image-zoom-viewer": "^2.2.15",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-snap-carousel": "^3.7.2",
