update .env.example, change verticalMargin at the bottom on EventDetails

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ DISTANCE_MATRIX_API_KEY=<GOOGLE_DISTANCE_MATRIX_API_KEY>
 GOOGLE_PLACES_API_KEY=<GOOGLE_PLACES_API_KEY>
 GOOGLE_AD_MOB_APP_ID=<GOOGLE_AD_MOB_APP_ID>
 FULL_SCREEN_AD_UNIT=<FULL_SCREEN_AD_UNIT>
+EVENT_DETAILS_AD_UNIT=<EVENT_DETAILS_BANNER_AD_UNIT>
