--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ BUCKET=<S3_BUCKET_NAME>
 DISTANCE_MATRIX_API_KEY=<GOOGLE_DISTANCE_MATRIX_API_KEY>
 GOOGLE_PLACES_API_KEY=<GOOGLE_PLACES_API_KEY>
 GOOGLE_AD_MOB_APP_ID=<GOOGLE_AD_MOB_APP_ID>
+SENTRY_DNS=<SENTRY_DNS>
 FULL_SCREEN_AD_UNIT=<FULL_SCREEN_AD_UNIT>
 EVENT_DETAILS_AD_UNIT=<EVENT_DETAILS_BANNER_AD_UNIT>
