--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react-native-image-zoom-viewer": "^2.2.15",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-snackbar-component": "^1.0.9",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-tab-view": "^1.0.2",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-axios-middleware": "^4.0.0"
+    "redux-axios-middleware": "^4.0.0",
+    "sentry-expo": "^1.9.0"
   }
 }
