--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-image-zoom-viewer": "^2.2.15",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-ratings": "^5.3.0",
     "react-native-snackbar-component": "^1.0.9",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-tab-view": "^1.0.2",
