--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "My Atlas",
-    "icon": "./assets/images/atlas-icon.png",
+    "name": "+Vibe",
+    "icon": "./assets/images/vibe.png",
     "version": "4.0.0",
     "slug": "moneta",
     "sdkVersion": "27.0.0",
@@ -9,7 +9,7 @@
       "bundleIdentifier": "com.sheltonjs.myatlas"
     },
     "splash": {
-      "image": "./assets/images/atlas-icon.png",
+      "image": "./assets/images/vibe.png",
       "resizeMode": "contain"
     },
     "orientation": "portrait",
