--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-snackbar-component": "^1.0.9",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-tab-view": "^1.0.2",
+    "react-native-timeago": "^0.4.0",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
