--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^1.1.2",
+    "apollo-boost": "^0.1.16",
     "axios": "^0.18.0",
     "exp": "^56.0.0",
     "expo": "^27.0.1",
+    "graphql": "^14.0.2",
     "immutability-helper": "^2.7.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
+    "react-apollo": "^2.1.11",
     "react-native": "~0.55.2",
     "react-native-aws3": "^0.0.8",
     "react-native-elements": "^1.0.0-beta5",
