--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^1.1.2",
     "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.2",
+    "apollo-link-error": "^1.1.0",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-state": "^0.4.1",
     "axios": "^0.18.0",
     "exp": "^56.0.0",
     "expo": "^27.0.1",
