--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "devDependencies": {
     "jest-expo": "~27.0.0",
     "react-native-dotenv": "^0.2.0",
-    "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "exp start",
-    "start-prod": "ENVFILE=.env.production exp start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "expo start",
+    "start-prod": "ENVFILE=.env.production expo start",
+    "eject": "expo eject",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "test": "jest"
   },
   "jest": {
