--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-elements": "^1.0.0-beta5",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-image-zoom-viewer": "^2.2.15",
+    "react-native-indicators": "^0.13.0",
     "react-native-maps": "^0.21.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-ratings": "^5.3.0",
